执行任务操作记录
